--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.7.1"
-kotlin = "2.0.0"
+#kotlin = "2.0.0"
+kotlin = "2.1.0"
 #coreKtx = "1.15.0"
 coreKtx = "1.12.0"
 junit = "4.13.2"
@@ -11,10 +12,12 @@ activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 
 retrofit = "2.9.0"
+okhttp = "4.11.0"
+gson = "2.10.1"
 room = "2.5.2"
 navigationCompose = "2.6.0"
-gson = "2.10.1"
 composeMaterial = "1.6.0"
+lifecycleRuntimeCompose = "2.6.1"
 
 
 [libraries]
@@ -38,11 +41,17 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "composeMaterial" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version = "2.1.0-1.0.29" }
 
