--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,11 @@ room = "2.5.2"
 navigationCompose = "2.6.0"
 composeMaterial = "1.6.0"
 lifecycleRuntimeCompose = "2.6.1"
+coreSplashscreen = "1.0.1"
+materialIconsExtended = "1.7.6"
+datastorePreferences = "1.0.0"
+material3 = "1.0.1"
+okhttpLogging = "4.11.0"
 
 
 [libraries]
@@ -42,12 +47,16 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
-okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "composeMaterial" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePreferences" }
+okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttpLogging" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
